[package]
name = "BN_Vol"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"